===== CHANGELOG =====
Zollern Galaxy v2.0.4
=====================

* Added planet Xathius.
	* Abstract, multi-colored planet with minor radiation and a unique atmospheric composition as well as a colorful sky.
	* Resource-intensive planet; filled with Obsidian lakes.
* Began work on space stations.
    * Gonna be a while before they're ready but the code is being prepared.
* Increased the rarity of Redstone Ore, and decreased how much of it can spawn in one vein.
    * Previously-generated chunks will not be affected.
* Added two new Planet Classes: Exotic and Abandoned.
* Decreased Tier of Zollus to 3. This was an oversight.
* Added more ores to Xathius.
* Diamond pickaxes are now needed to harvest Zolnium Crystals.
* Changed Purgot and Zollus to be much colder at night.
* Changed Xathius to be much hotter during the day.
* Adjusted hitboxes of Mobs.
* Updated HUD to show the thermal level modifier when not neutral.
* Added Wind Level to Galactic HUD.
* Modified Star Gates to warp players closer to ground level.
    * Too many space explorers were dying due to inability to survive the force of gravity and we received complaints from the Human Resources department.
* Modified ChunkProviders for Eden to generate more beautifully. To see these changes, you will need to generate new chunks there.
* Set Rocket Tier requirement for Xathius to 10 since it's such a heavily-ored Planet.
* Added planet Oasis.
    * Mostly another paradise planet with lots of water and some secrets.
* Added more Rock Bricks for the new planets.
* Made a custom Creative Tabs image (complete with search bar!).
* Fixed HUD showing incorrect temperature data.
* Created an "Omnitool." Can harvest any block. A bit OP, will tone down soon.
* Increased hardness and resistance of Zolnium Crystals.
* 