@@ -245,7 +245,7 @@ public class BiomeDecoratorEden extends BiomeDecoratorZG {
 		if (this.generateTowers) {
 			y = rand.nextInt(rand.nextInt(genY) + 8);
 			if (y >= 63) {
-				if (rand.nextInt(1000) <= 45) {
+				if (rand.nextInt(1000) <= 25) {
 					(new WorldGenEdenTower()).generate(world, rand, this.chunkPos.add(x, y, z));
 				}
 			}
