@@ -12,8 +12,8 @@ import net.minecraft.item.ItemTool;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
 import zollerngalaxy.blocks.ZGBlocks;
-import zollerngalaxy.blocks.creativetabs.ZGTabs;
 import zollerngalaxy.core.ZollernGalaxyCore;
+import zollerngalaxy.creativetabs.ZGTabs;
 import zollerngalaxy.items.ISingleZGItemRender;
 import zollerngalaxy.lib.helpers.json.JSONFactory;
 import com.google.common.collect.Sets;
