@@ -147,6 +147,7 @@ tile.oasiscobblerock.name=Oasis Cobblerock
 tile.oasisrockbricks.name=Oasis Rock Bricks
 tile.oasisdirt.name=Oasis Dirt
 tile.oasistallgrass.name=Oasis Tall Grass
+tile.oasisflower.name=Oasis Flower
 tile.oasisgravel.name=Oasis Gravel
 tile.oasissuperchargedcoalore.name=Oasis Super Charged Coal Ore
 tile.oasiscoalore.name=Oasis Coal Ore
